manifests/apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: default
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30888
    protocol: TCP
  type: NodePort
